kubernetes/cluster/extras/meshcentral/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meshcentral
  namespace: extras
  labels:
    app.kubernetes.io/name: meshcentral
  annotations:
    kubernetes.io/ingress.class: public
    cert-manager.io/cluster-issuer: lets-encrypt
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/proxy-ssl-verify: 'off'
spec:
  rules:
    - host: mesh.brhd.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                # name: keda-http-interceptor
                name: meshcentral
                port:
                  number: 8443
  tls:
    - hosts:
        - mesh.brhd.io
